tests/syntax_tests/data/parsing/errors/structure/embed.res
// Incomplete :: embed syntax in module/structure positions
module M = ::
include ::
module N = ::sql.one(
include ::sql.one("x"

